fix dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  color: white;
+}
+
 html {
   width: 100%;
   padding: 0;
@@ -19,6 +23,7 @@ html {
   text-decoration: none;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
   /* border: 1px solid blue; */
 }
 
@@ -54,6 +59,7 @@ body {
 @media (prefers-color-scheme: dark) {
   :root {
     color-scheme: dark;
+    color: #fff;
   }
 }
 
